added validation and additional features

--- a/app/views/women/new.erb
+++ b/app/views/women/new.erb
@@ -1,3 +1,9 @@
+<% if flash[:errors] %>
+  <% flash[:errors].each do |error| %>
+    <%= error %>
+  <% end %>
+<% end %>
+
 <h1>ADD SOMEONE 👑</h1>
 <%= form_for @woman do |f| %>
   <%= f.label :name %>
